--- a/1.html
+++ b/1.html
@@ -1,31 +1,72 @@
 <!doctype html>
 <html>
 <head>
-<title>김도영의 EVT - 김도영의 북적북적</title>
+<title>김도영의 북적북적</title>
 <meta charset="utf-8">
+<style>
+a {
+  color:black; text-decoration:none;
+}
+h1 {
+  text-align:center;
+  border-bottom:3px solid gray;
+  margin:0px;
+  width:900px;
+  padding:10px;
+}
+ol {
+  border-right: 3px solid gray;
+  width: 140px;
+  margin:0px;
+  padding:31px;
+}
+#grid {
+  display: grid;
+  grid-template-columns:250px 2fr;
+  margin:0px;
+  width: 900px;
+}
+h2{
+  text-align: center;
+}
+body {
+  margin:0px;
+}
+@media (max-width:730px;){
+  div {
+    background-color:tomato;
+  }
+}
+</style>
 </head>
 <body>
-  <h1><a href="index.html">김도영</a></h1>
-<ol>
-  <li><a href="1.html">김도영의 북적북적</a></li>
-  <li><a href="2.html">김도영의 저벅저벅</a></li>
-  <li><a href="3.html">김도영의 끄적끄적</a></li>
-</ol>
-<h2><img src="emotion.jpg" width="30">김도영의 북적북적<img src="emotion.jpg" width="30"></h2>
-<p>내가 지금 읽고 있는 책은 <strong>'<u>부</u>의 추월차선'</strong>이라는 책이다.<br>
-이 책은 경제도서인데, 나도 내가 이런 책을 이런 시기에 읽게 될 줄은 몰랐다.<br>
-우연한 기회에 선생님이 추천해주셔서 읽고 있는데,<br> 앞으로 아침마다 20분씩 시간을 내어
-조금씩 읽어볼 예정이다.<br> 나의 삶에 터닝포인트가 되진 않을지 살짝 설레이기도 한다.</p>
-<img src="book.jpg" width="450">
-<p style="margin-top:40px;">이 책 이전에 읽은 책은 <strong>'믿음에 대하여'</strong>라는 책이다.<br>
-실무사 계약을 마치고 <a href="https://blog.naver.com/my_evt/222944046124" target="_blank">강화도로 북스테이</a>에 다녀왔는데 그 때 완독했다.<br>
-연작소설인데 피프티피플의 간략한 버전이라고생각하면 될 듯 하다.<br>
-나는 원래 인물 간 관계가 첨예하게 맞닿아있고 감정에 대한 서사가 상세한 이야기를 좋아하는데,<br>
-박상영 작가의 책을 읽으면서 실체 그 자체를 재미나게 묘사하는이야기도 즐겁다는 것을 깨달았다.</p>
-<p style="margin-top:30px;"> <h3><<내가 읽은 박상영 작가 책 목록>></h3>
-<ul>
-  <li>우럭 한 점 우주의 맛</li>
-  <li>믿음에 대하여</li>
-  <li>패리스 힐튼을 찾습니다</li>
-  </ul>
+  <h1><a href="index.html" style="color:green;">김도영</a></h1>
+<div id="grid">
+  <ol>
+    <li><a href="1.html" style="color:green; text-decoration:underline">김도영의 북적북적</a></li>
+    <li><a href="2.html">김도영의 저벅저벅</a></li>
+    <li><a href="3.html">김도영의 끄적끄적</a></li>
+  </ol>
+  <div style="margin-bottom:30px;">
+      <h2><img src="emotion.jpg" width="30">김도영의 북적북적<img src="emotion.jpg" width="30"></h2>
+      <p>내가 지금 읽고 있는 책은 <strong>'<u>부</u>의 추월차선'</strong>이라는 책이다.<br>
+        이 책은 경제도서인데, 나도 내가 이런 책을 이런 시기에 읽게 될 줄은 몰랐다.<br>
+        우연한 기회에 선생님이 추천해주셔서 읽고 있는데,<br> 앞으로 아침마다 20분씩 시간을 내어
+        조금씩 읽어볼 예정이다.<br> 나의 삶에 터닝포인트가 되진 않을지 살짝 설레이기도 한다.</p>
+      <img src="book.jpg" width="450">
+      <p style="margin-top:40px;">이 책 이전에 읽은 책은 <strong>'믿음에 대하여'</strong>라는 책이다.<br>
+        C학교 근무를 마치고 <a href="https://blog.naver.com/my_evt/222944046124" target="_blank">강화도로 북스테이</a>에 다녀왔는데 그 때 완독했다.<br>
+        연작소설인데 피프티피플의 간략한 버전이라고생각하면 될 듯 하다.<br>
+        나는 원래 인물 간 관계가 첨예하게 맞닿아있고 감정서술이 풍부한 글을 좋아하는데,<br>
+        박상영 작가의 책을 읽으면서 묘사 자체가 자세한 글에 대한 흥미를 가질 수 있었다.</p>
+      <p style="margin-top:40px;"> <h3><<내가 읽은 박상영 작가 책 목록>></h3>
+      <ul>
+        <li>우럭 한 점 우주의 맛</li>
+        <li><a href="https://search.shopping.naver.com/book/catalog/33514814625?cat_id=50010002&frm=PBOKPRO&query=%EB%AF%BF%EC%9D%8C%EC%97%90+%EB%8C%80%ED%95%98%EC%97%AC&NaPm=ct%3Dlbccyaeg%7Cci%3D21dab3947b0a9ee1ea49a9f20fefb6ee15e458bf%7Ctr%3Dboknx%7Csn%3D95694%7Chk%3D804c3017d5320d29eb135ac130f7d0ae818995c8" target="_blank">믿음에 대하여</a></li>
+        <li>패리스 힐튼을 찾습니다</li>
+      </ul>
+      </p>
+    </div>
+</div>
 </body>
+</html>
