--- a/2.html
+++ b/2.html
@@ -1,37 +1,70 @@
 <!doctype html>
 <html>
 <head>
-<title>김도영의 EVT - 김도영의 저벅저벅</title>
+<title>김도영의 저벅저벅</title>
 <meta charset="utf-8">
+<style>
+a {
+  color:black;text-decoration: none;
+}
+h1 {
+  text-align:center;
+  border-bottom:3px solid gray;
+  margin:0px;
+  width:900px;
+  padding:10px;
+}
+ol {
+  border-right: 3px solid gray;
+  width: 140px;
+  margin:0px;
+  padding:31px;
+}
+#grid {
+  display:grid;
+  grid-template-columns: 250px 1fr;
+  width:900px;
+}
+h2 {
+  text-align: center;
+}
+body {
+  margin:0px;
+}
+</style>
 </head>
 <body>
-  <h1><a href="index.html">김도영</a></h1>
-<ol>
-  <li><a href="1.html">김도영의 북적북적</a></li>
-  <li><a href="2.html">김도영의 저벅저벅</a></li>
-  <li><a href="3.html">김도영의 끄적끄적</a></li>
-</ol>
-<h2><img src="발.jpg" width="30">김도영의 저벅저벅<img src="발.jpg" width="30"></h2>
-<p>나는 여행하는 것을 좋아한다.<br>
-  새로운 곳에서 지내는 동안만큼은 평소의 고민을 잊을 수 있고,<br>
-  새로운 경험도 많이할 수 있기 때문!</p>
-<p style="margin-top:50px;"><h3>▧ 혼자 다녀온 여행 ▧</h3>
-가장 최근에 혼자 다녀온 여행은, 강화도에서의 북스테이이다. 숙소의 이름은 '책방시점'.<br>
-강화도 온수리의 소담마을이라는 곳에 위치해있다.<br>
-아기자기하게 꾸며진 공간 속에 재미있는 책들이 가득하다.<br>
-베스트셀러를 모아둔 게 아니라, 지기님의 취향이 가득 담긴 책들로 채워져있는데 큐레이션과 함께 구경하다보면
-시간 가는줄 모를 것이다.<br><br><br>
-<img src="책방4.jpg" width="500"><br>
-<img src="책방2.jpg" width="500"><br></p>
-<p> 이 곳에는 이층침대방, 넓은방, 다락방 이렇게 3개의 방이 있는데,<br>
-  나는 그 중에서 이층침대방에 묵었다.<br>
-  책 두어 권을 들고 바스락 소리가 나는 새하얀 이불 속으로 들어가면<br>
-  여기가 바로 극락...<br><br><br>
-  <img src="책.jpg" width="500"><br>
-  <img src-"책방3.jpg" width="500"></p>
-<p> 이 곳에서의 추억 중 잊을 수 없는 또 한 가지는 바로 <strong>고양이!!!</strong><br>
-    엄청나게 귀여운 개냥이 "쨍쨍이"가 있다.<br>
-    치즈냥 쨍쨍이가 시점의 마스코트랍니다...♡<br><br><br>
-  <img src="고양이.jpg" width="500"><br>
-  <img src="또양이.jpg" width="500"></p>
+  <h1><a href="index.html" style="color:green;">김도영</a></h1>
+<div id="grid">
+  <ol>
+    <li><a href="1.html">김도영의 북적북적</a></li>
+    <li><a href="2.html" style="color:green; text-decoration:underline">김도영의 저벅저벅</a></li>
+    <li><a href="3.html">김도영의 끄적끄적</a></li>
+  </ol>
+  <div>
+    <h2><img src="발.jpg" width="30" id="footprint">김도영의 저벅저벅<img src="발.jpg" width="30"></h2>
+    <p>나는 여행하는 것을 좋아한다.<br>
+      새로운 곳에서 지내는 동안만큼은 평소의 고민을 잊을 수 있고,<br>
+      새로운 경험도 많이할 수 있기 때문!</p>
+    <p style="margin-top:30px;"><h3><font color="red">▧ 혼자 다녀온 여행 ▧</font></h3>
+      가장 최근에 혼자 다녀온 여행은, 강화도에서의 북스테이이다. 숙소의 이름은 <u>'책방시점'</u>.<br>
+      강화도 온수리의 소담마을이라는 곳에 위치해있다.<br>
+      아기자기하게 꾸며진 공간 속에 재미있는 책들이 가득하다.<br>
+      베스트셀러를 모아둔 게 아니라, 지기님의 취향이 가득 담긴 책들로 채워져있는데<br>
+      큐레이션과 함께 구경하다보면 시간 가는줄 모를 것이다.<br><br><br>
+      <img src="책방4.jpg" width="500"><br>
+      <img src="책방2.jpg" width="500"><br></p>
+    <p> 이 곳에는 이층침대방, 넓은방, 다락방 이렇게 3개의 방이 있는데,<br>
+        나는 그 중에서 이층침대방에 묵었다.<br>
+        책 두어 권을 들고 바스락 소리가 나는 새하얀 이불 속으로 들어가면<br>
+        여기가 바로 극락...<br><br><br>
+        <img src="책.jpg" width="500"><br>
+        <img src-"책방3.jpg" width="500"></p>
+    <p> 이 곳에서의 추억 중 잊을 수 없는 또 한 가지는 바로 <strong>고양이!!!</strong><br>
+        엄청나게 귀여운 개냥이 "쨍쨍이"가 있다.<br>
+        치즈냥 쨍쨍이가 시점의 마스코트랍니다...♡<br><br><br>
+        <img src="고양이.jpg" width="500"><br>
+        <img src="또양이.jpg" width="500"></p>
+  </div>
+</div>
 </body>
