--- a/3.html
+++ b/3.html
@@ -1,28 +1,61 @@
 <!doctype html>
 <html>
 <head>
-<title>김도영의 EVT - 김도영의 끄적끄적</title>
+<title>김도영의 끄적끄적</title>
 <meta charset="utf-8">
+<style>
+a {
+  color:black; text-decoration: none;
+}
+h1 {
+  text-align:center;
+  border-bottom:3px solid gray;
+  margin:0px;
+  width:900px;
+  padding:10px;
+}
+ol {
+  border-right: 3px solid gray;
+  width: 140px;
+  margin:0px;
+  padding:31px;
+}
+#grid {
+  display:grid;
+  grid-template-columns: 250px 1fr;
+  width:900px;
+}
+h2 {
+  text-align: center;
+}
+body {
+  margin:0px;
+}
+</style>
 </head>
 <body>
-  <h1><a href="index.html">김도영</a></h1>
-<ol>
-  <li><a href="1.html">김도영의 북적북적</a></li>
-  <li><a href="2.html">김도영의 저벅저벅</a></li>
-  <li><a href="3.html">김도영의 끄적끄적</a></li>
-</ol>
-<h2><img src="메모.jpg" width="30">김도영의 끄적끄적<img src="메모.jpg" width="30"></h2>
-<p>이번에는 내가 좋아하는 것들을 급히(?) 데려왔다.<br>
-가끔 내 취향이 뭔지 나도 모르겠을 때가 있다.<br>
-유행인 것들을 따라서 좋아하는 건지 의아할 때도 있음^^...<br>
-그래도 <u>내가 해온 것</u>들, <u>하고 싶은 것</u>들을 모아보면<br>
-그게 취향이 되는 거겠지 ㅁㅓ,,,,</p>
-<ul>
-  <li>아늑한 공간</li>
-  <li>베이킹</li>
-  <li>바다</li>
-</ul>
-<img src="창가.jpg" width="300"><img src="책상.jpg" width="300"><br>
-<img src="브라우니.jpg" width="300"><img src="파운드.jpg" width="300"><br>
-<img src="바다.jpg" width="300"><img src="바아다.jpg" width="300"<br>
+  <h1><a href="index.html" style="color:green;">김도영</a></h1>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html">김도영의 북적북적</a></li>
+      <li><a href="2.html">김도영의 저벅저벅</a></li>
+      <li><a href="3.html" style="color:green; text-decoration:underline;">김도영의 끄적끄적</a></li>
+    </ol>
+    <div style="margin-bottom:30px;">
+      <h2><img src="메모.jpg" width="30">김도영의 끄적끄적<img src="메모.jpg" width="30"></h2>
+      <p>이번에는 내가 좋아하는 것들을 급히(?) 데려왔다.<br>
+      가끔 내 취향이 뭔지 나도 모르겠을 때가 있다.<br>
+      유행인 것들을 따라서 좋아하는 건지 의아할 때도 있음^^...<br>
+      그래도 <span style="color:yellowgreen; font-weight:bold;">내가 해온 것들, 하고 싶은 것들</span>을 모아보면<br>
+      그게 취향이 되는 거겠지 ㅁㅓ,,,,</p>
+      <ul>
+        <li>아늑한 공간</li>
+        <li>베이킹</li>
+        <li>바다</li>
+      </ul>
+      <img src="창가.jpg" width="300"><img src="책상.jpg" width="300"><br>
+      <img src="브라우니.jpg" width="300"><img src="파운드.jpg" width="300"><br>
+      <img src="바다.jpg" width="300"><img src="바아다.jpg" width="300"<br>
+    </div>
+  </div>
 </body>
