--- a/index.html
+++ b/index.html
@@ -1,14 +1,50 @@
 <!doctype html>
 <html>
 <head>
-<title>김도영의 EVT</title>
+<title>WELCOME!!</title>
 <meta charset="utf-8">
+<style>
+body {
+  margin:0px;
+}
+a {
+  color:black; text-decoration: none;
+}
+h1 {
+  text-align:center;
+  border-bottom: 3px solid gray;
+  width: 770px;
+  margin: 0px;
+  padding:20px;
+}
+ol {
+  border-right: 3px solid gray;
+  width:135px;
+  margin-top:0px;
+  padding:32px;
+}
+#grid {
+  display: grid;
+  grid-template-columns: 210px 1fr;
+}
+#grid div {
+  padding:20px;
+}
+</style>
 </head>
 <body>
-  <h1>WELCOME TO 김도영 WORLD!!</h1>
-<ol>
-  <li><a href="1.html">김도영의 북적북적</a></li>
-  <li><a href="2.html">김도영의 저벅저벅</a></li>
-  <li><a href="3.html">김도영의 끄적끄적</a></li>
-</ol>
-<img src="김도영.jpg" width="500">
+  <h1 style="color:skyblue">WELCOME TO 김도영 WORLD!!</h1>
+<div id="grid">
+  <ol>
+    <li><a href="1.html" target="_blank">김도영의 북적북적</a></li>
+    <li><a href="2.html" target="_blank">김도영의 저벅저벅</a></li>
+    <li><a href="3.html" target="blank">김도영의 끄적끄적</a></li>
+  </ol>
+  <div>
+    <img src="김도영.jpg" width="560">
+    <p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/1I0WIs5rQjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </p>
+  </div>
+</div>
+</body>
